cmake_minimum_required(VERSION 3.25)
project(DataStructure and Algorithms C)

set(CMAKE_C_STANDARD 17)

add_subdirectory(1-Arrays)
add_subdirectory(2-Linked List)
add_subdirectory(3-Stack)
add_subdirectory(4-Queue)
add_subdirectory(5-Hash-Table)
add_subdirectory(6-Tree)
add_subdirectory(7-Heap)
add_subdirectory(8-Graph)